--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -36,7 +36,7 @@
                             <i class="fas fa-search"></i>
                         </a>
 
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <div class="dropdown-menu has-success" aria-labelledby="dropdownMenuButton">
                             @using (Html.BeginForm("Search", "Items", FormMethod.Post))
                             {
                                 <input type="search" name="searchName" id="searchName" placeholder="Search for item..." class="form-control">
@@ -48,14 +48,14 @@
                             <i class="fab fa-product-hunt"></i> Products
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-none d-xl-block">
                         <a class="nav-link" href="~/Branches/Index" onclick="scrollToDownload()">
                             <i class="fab fa-periscope"></i> Branches
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="~/Home/Contact" onclick="scrollToDownload()">
-                            <i class="far fa-envelope"></i> Contact us
+                            <i class="fas fa-envelope"></i> Contact us
                         </a>
                     </li>
                     <li class="nav-item">
@@ -66,10 +66,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="~/Cart/MyCart" onclick="scrollToDownload()">
                             <i class="fas fa-shopping-cart"></i>
-							<span class="badge">@Session["count"]</span>
-                        </a>
+                        </a>                        
+                        
+                        @if( Convert.ToInt32(Session["count"]) != 0){
+                            <span class="badge badge-pill badge-light">@Session["count"]</span>  
+                        }
                     </li>
-					<li>
+
+					<li class="nav-item">
 						<!--Partial Page-->
                         @{Html.RenderPartial("_Login");}
 					</li>
