change glyphicons with fa icons, fix buttons link and some other changes

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -30,7 +30,7 @@
                                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                 </div></span>
 
-                                <div class="form-checkX">
+                                @*<div class="form-checkX">
                                     <label class="form-check-label">
                                         @Html.CheckBoxFor(m => m.RememberMe, new {@class = "form-check-input"})
                                         @Html.LabelFor(m => m.RememberMe)
@@ -38,7 +38,7 @@
                                             <span class="check"></span>
                                         </span>
                                     </label>                                        
-                                </div>
+                                </div>*@
                             </div>
                             <div class="card-footer justify-content-center">
                                 <input type="submit" class="btn btn-info col-9 mx-auto mb-3">
