--- a/Views/ApplicationUsers/Create.cshtml
+++ b/Views/ApplicationUsers/Create.cshtml
@@ -147,7 +147,7 @@
 }
 <div class="row">
     <div class="col-md-2">
-        <a href="/ApplicationUsers" class="btn btn-default btn-block">
+        <a href="~/ApplicationUsers" class="btn btn-default btn-block">
             <span class="glyphicon glyphicon-arrow-left"></span> Back to Users List
         </a>
     </div>
