--- a/Views/Cart/Edit.cshtml
+++ b/Views/Cart/Edit.cshtml
@@ -52,14 +52,14 @@
         </div>
     </div>  
     <div class="row d-flex justify-content-between">
-        <input type="submit" value="Send" class="btn btn-primary col-9 mx-auto" />
+        <input type="submit" value="Save" class="btn btn-primary col-9 mx-auto" />
     </div>
 </div>
 }
 
 <div class="row">
             <div class="col-md-2">
-                <a href="Cart" class="btn btn-default btn-block">
+                <a href="~/Cart/MyCart" class="btn btn-default btn-block">
                     <span class="glyphicon glyphicon-arrow-left"></span> Back to Cart
                 </a>
             </div></div>
