--- a/Views/Account/EditProfile.cshtml
+++ b/Views/Account/EditProfile.cshtml
@@ -96,7 +96,7 @@ else
 <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
     <div class="row">
         <div class="col-md-2">
-            <a href="/Home" class="btn btn-primary col-9 mx-auto">
+            <a href="~/Home" class="btn btn-primary col-9 mx-auto">
                 <span class="glyphicon glyphicon-arrow-left"></span> Back to Home Page
             </a>
         </div>
