--- a/Views/ApplicationUsers/Index.cshtml
+++ b/Views/ApplicationUsers/Index.cshtml
@@ -18,13 +18,14 @@
             </div>
         </div>
         <div class="col-md-2">
-            <button type="submit" value="Search" class="btn btn-default btn-block"><span class="glyphicon glyphicon-search"></span> Search</button>
+            <button type="submit" value="Search" class="btn btn-default btn-block">
+			<i class="fas fa-search"></i> Search</button>
         </div>
         @if (User.IsInRole("Admins"))
         {
             <div class="col-md-2">
                 <a class="btn btn-default btn-block" href=@Url.Action("AddUser","Account")>
-                    <span class="glyphicon glyphicon-plus-sign"></span> Create New User
+                    <i class="fas fa-plus-circle"></i> Create New User
                 </a>
             </div>
         }
@@ -89,10 +90,10 @@
                     {
                     <td>
                         <a title="Edit" href=@Url.Action("Edit", new { id = item.Id })>
-                            <span class="glyphicon glyphicon glyphicon-edit" style="font-size:large"></span>
+                            <i class="fas fa-edit fa-lg"></i>
                         </a> |
                         <a title="Delete" href=@Url.Action("Delete", new { id = item.Id }) onclick="return confirm('Are you sure you want to delete this user?')">
-                            <span class="glyphicon glyphicon glyphicon-trash" style="font-size:large"></span>
+                            <i class="fas fa-trash-alt fa-lg"></i>
                         </a>
                     </td>
                 }
@@ -116,30 +117,24 @@ else
                 case "Created":
                     {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The user has been created successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The user has been created successfully.</span>
             </div>
         }
         break;
     case "Edited":
         {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The user has been edited successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The user has been edited successfully.</span>
             </div>
         }
         break;
     case "Deleted":
         {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The user has been deleted successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The user has been deleted successfully.</span>
             </div>
         }
         break;
