--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -32,7 +32,7 @@
 <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
     <div class="row">
     <div class="col-md-2">
-        <a href="/Categories" class="btn btn-default btn-block">
+        <a href="~/Categories" class="btn btn-default btn-block">
             <span class="glyphicon glyphicon-arrow-left"></span> Back to Categories List
         </a>
     </div>
