--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -13,8 +13,8 @@
 <div class="row">
     <div class="col-md-offset-5 col-md-2">
         <div class="row">
-            <a class="btn btn-default btn-block" href="Categories/Create">
-                <span class="glyphicon glyphicon-plus-sign"></span> Create New Category
+            <a class="btn btn-default btn-block" href="~/Categories/Create">
+                <i class="fas fa-plus-circle"></i> Create New Category
             </a>
         </div>
         </div>
@@ -41,10 +41,10 @@
                     </td>
                     <td>
                         <a title="Edit" href=@Url.Action("Edit", new { id = item.Id })>
-                            <span class="glyphicon glyphicon glyphicon-edit" style="font-size:large"></span>
+                            <i class="fas fa-edit fa-lg"></i>
                         </a> |
                         <a title="Delete" href=@Url.Action("Delete", new { id = item.Id }) onclick="return confirm('Are you sure you want to delete this category?')">
-                            <span class="glyphicon glyphicon glyphicon-trash" style="font-size:large"></span>
+                            <i class="fas fa-trash-alt fa-lg"></i>
                         </a>
                     </td>
                 </tr>
@@ -66,30 +66,24 @@
         case "Created":
             {
                 <div class="alert alert-success" id="error-div">
-                    <span class="glyphicon glyphicon-ok"></span>
-                    <span>
-                        The category has been created successfully.
-                    </span>
+                    <i class="fas fa-check"></i>
+                    <span> The category has been created successfully.</span>
                 </div>
             }
             break;
         case "Edited":
             {
                 <div class="alert alert-success" id="error-div">
-                    <span class="glyphicon glyphicon-ok"></span>
-                    <span>
-                        The category has been edited successfully.
-                    </span>
+                    <i class="fas fa-check"></i>
+                    <span> The category has been edited successfully.</span>
                 </div>
             }
             break;
         case "Deleted":
             {
                 <div class="alert alert-success" id="error-div">
-                    <span class="glyphicon glyphicon-ok"></span>
-                    <span>
-                        The category has been deleted successfully.
-                    </span>
+                    <i class="fas fa-check"></i>
+                    <span> The category has been deleted successfully.</span>
                 </div>
             }
             break;
