--- a/Views/Invoices/Index.cshtml
+++ b/Views/Invoices/Index.cshtml
@@ -47,11 +47,12 @@
             </div>
             <div class="col-md-2">
                 <div class="row">
-                    <input type="submit" value="Search" class="btn btn-default btn-block" />
+                    <button type="submit" value="Search" class="btn btn-default btn-block" >
+					<i class="fas fa-search"></i> Search</button>
                 </div>
                 <div class="row">
                     <a class="btn btn-default btn-block" href=@Url.Action("Create")>
-                        <span class="glyphicon glyphicon-plus-sign"></span> Create New Invoice
+                        <i class="fas fa-plus-circle"></i> Create New Invoice
                     </a>
                 </div>
             </div>
@@ -110,11 +111,11 @@
                         </td>
                         <td>
                             <a title="Details" @@click="fetchDetails(@item.Id)" data-toggle="modal" data-target="#myModal">
-                                <span class="glyphicon glyphicon glyphicon-list-alt" style="font-size:large"></span>
+                                <i class="fas fa-file-alt fa-lg" style="color:#a72abd"></i>
                             </a>@if (User.IsInRole("Admins"))
                             {
-                                    <i>| </i><a title="Delete" href=@Url.Action("Delete", new { id = item.Id }) onclick="return confirm('Are you sure you want to delete this invoice?')">
-                                        <span class="glyphicon glyphicon glyphicon-trash" style="font-size:large"></span>
+                                    <span>|</span><a title="Delete" href=@Url.Action("Delete", new { id = item.Id }) onclick="return confirm('Are you sure you want to delete this invoice?')">
+                                        <i class="fas fa-trash-alt fa-lg"></i>
                                     </a>
                             }
                             
@@ -157,10 +158,8 @@
         case "Deleted":
             {
                 <div class="alert alert-success" id="error-div">
-                    <span class="glyphicon glyphicon-ok"></span>
-                    <span>
-                        The invoice has been deleted successfully.
-                    </span>
+                    <i class="fas fa-check"></i>
+                    <span> The invoice has been deleted successfully.</span>
                 </div>
             }
             break;
