--- a/Views/Items/Edit.cshtml
+++ b/Views/Items/Edit.cshtml
@@ -134,7 +134,7 @@
 <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-md-2">
-                    <a href="Items" class="btn btn-default btn-block">
+                    <a href="~/Items" class="btn btn-default btn-block">
                         <span class="glyphicon glyphicon-arrow-left"></span> Back to Items List
                     </a>
                 </div>
