--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -19,13 +19,14 @@
             </div>
         </div>
         <div class="col-md-2">
-            <input type="submit" value="Search" class="btn btn-default btn-block" />
+            <button type="submit" value="Search" class="btn btn-default btn-block" >
+			<i class="fas fa-search"></i> Search</button>
         </div>
         @if (User.IsInRole("Admins"))
         {
             <div class="col-md-2">
                 <a class="btn btn-default btn-block" href=@Url.Action("Create","Items")>
-                    <span class="glyphicon glyphicon-plus-sign"></span> Create New Item
+                    <i class="fas fa-plus-circle"></i> Create New Item
                 </a>
             </div>
         }
@@ -34,36 +35,17 @@
 }
 @if (Model != null && Model.Count() > 0)
 {
-
-        <table class="table table-hover">
+	<table class="table table-hover">
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.ItemType.CategoryName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.BrandName)
-                </th>
                 <th>
                     @Html.DisplayNameFor(model => model.ModelNumber)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Color)
+                    @Html.DisplayNameFor(model => model.BrandName)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FrameMaterial)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FrameDesign)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.LensMaterial)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.LensDesign)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Gender)
-                </th>
+				<th>
+				Description
+				</th>
                 <th>
                     @Html.DisplayNameFor(model => model.Price)
                 </th>
@@ -76,31 +58,13 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ItemType.CategoryName)
+                        @Html.DisplayFor(modelItem => item.ModelNumber)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.BrandName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ModelNumber)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Color)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FrameMaterial)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FrameDesign)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LensMaterial)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LensDesign)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Gender)
+						@Html.DisplayFor(modelItem => item.Color) @Html.DisplayFor(modelItem => item.ItemType.CategoryName) for @Html.DisplayFor(modelItem => item.Gender)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Price)
@@ -114,19 +78,19 @@
                         @if (User.IsInRole("Admins"))
                         {
                             <a title="Edit" href=@Url.Action("Edit", new { id = item.Id })>
-                                <span class="glyphicon glyphicon glyphicon-edit" style="font-size:large"></span>
+                                <i class="fas fa-edit fa-lg"></i>
                             </a> 
-                            <i>|</i>
+                            <span>|</span>
                         }
                         
                         <a title="Details" href=@Url.Action("Details", new { id = item.Id })>
-                            <span class="glyphicon glyphicon glyphicon-list-alt" style="font-size:large"></span>
+                            <i class="fas fa-file-alt fa-lg" style="color:#a72abd"></i>
                         </a>
                         @if (User.IsInRole("Admins"))
                         {
-                             <i>|</i>
-                        <a title="Delete" href=@Url.Action("Delete", new { id = item.Id }) onclick="return confirm('Are you sure you want to delete this item?')">
-                            <span class="glyphicon glyphicon glyphicon-trash" style="font-size:large"></span>
+                            <span>|</span>
+							<a title="Delete" href=@Url.Action("Delete", new { id = item.Id }) onclick="return confirm('Are you sure you want to delete this item?')">
+                            <i class="fas fa-trash-alt fa-lg"></i>
                         </a>
                         }
                     </td>
@@ -149,30 +113,24 @@
     case "Created":
         {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The item has been created successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The item has been created successfully.</span>
             </div>
         }
         break;
     case "Edited":
         {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The item has been edited successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The item has been edited successfully.</span>
             </div>
         }
         break;
     case "Deleted":
         {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The item has been deleted successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The item has been deleted successfully.</span>
             </div>
         }
         break;
