--- a/Views/Quantities/Create.cshtml
+++ b/Views/Quantities/Create.cshtml
@@ -15,7 +15,7 @@
     @Html.AntiForgeryToken()
 
     <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
-        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">//dear Muhannad I think this div is not closed and I don't know where I should close it
+        <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             @{ 
                 if(ViewBag.Result!=null)
                 {
@@ -64,7 +64,7 @@
 <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-md-2">
-                    <a href="Quantities" class="btn btn-default btn-block">
+                    <a href="~/Quantities" class="btn btn-default btn-block">
                         <span class="glyphicon glyphicon-arrow-left"></span> Back to Quantities List
                     </a>
                 </div>
