--- a/Views/Quantities/Index.cshtml
+++ b/Views/Quantities/Index.cshtml
@@ -33,7 +33,7 @@
         <div class="col-md-2">
             <div class="row">
                 <button type="submit" value="Search" class="btn btn-default btn-block">
-                    <span class="glyphicon glyphicon-search"></span> Search
+                    <i class="fas fa-search"></i> Search
                 </button>
             </div>
         </div>
@@ -41,7 +41,7 @@
         {
             <div class="col-md-2">
                 <a class="btn btn-default btn-block" href="~/Quantities/Create">
-                    <span class="glyphicon glyphicon-plus-sign"></span> Add New Quantity
+                    <i class="fas fa-plus-circle"></i> Add New Quantity
                 </a>
             </div>
         }
@@ -95,10 +95,10 @@
                     {
                     <td>
                         <a title="Edit" href=@Url.Action("Edit", new { ItemId = item.ItemId, BranchId=item.BranchId })>
-                            <span class="glyphicon glyphicon glyphicon-edit" style="font-size:large"></span>
-                        </a> |
+                            <i class="fas fa-edit fa-lg"></i>
+                        </a>|
                         <a title="Delete" href=@Url.Action("Delete", new { ItemId = item.ItemId, BranchId = item.BranchId }) onclick="return confirm('Are you sure you want to delete this quantity?')">
-                            <span class="glyphicon glyphicon glyphicon-trash" style="font-size:large"></span>
+                            <i class="fas fa-trash-alt fa-lg"></i>
                         </a>
                     </td>
                 }
@@ -121,30 +121,24 @@ else
     case "Created":
         {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The quantity has been added successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The quantity has been added successfully.</span>
             </div>
         }
         break;
     case "Edited":
         {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The quantity has been edited successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The quantity has been edited successfully.</span>
             </div>
         }
         break;
     case "Deleted":
         {
             <div class="alert alert-success" id="error-div">
-                <span class="glyphicon glyphicon-ok"></span>
-                <span>
-                    The quantity has been deleted successfully.
-                </span>
+                <i class="fas fa-check"></i>
+                <span> The quantity has been deleted successfully.</span>
             </div>
         }
         break;
